tests/baselines/reference/functionInIfStatementInModule.errors.txt
functionInIfStatementInModule.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== functionInIfStatementInModule.ts (1 errors) ====
     
    module Midori
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    {
        if (false) {
            function Foo(src)
            {
            }
        }
    }
    